k8s/apps/home-automation/zigbee2mqtt/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  hosts:
    - 'esphome.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: zigbee2mqtt.home-automation.svc.cluster.local
          weight: 100
